--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,33 +12,18 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Sign up</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Sign in</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Admins</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <%= render 'layouts/header' %>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
   <div class="container">
+    <% if devise_controller? %>
+    <div class="col-6 offset-3 bg-light p-5 rounded-lg">
+      <%= yield %>
+    </div>
+    <% else %>
     <%= yield %>
+    <% end %>
+    <%= debug(params) if Rails.env.development? %>
   </div>
 </body>
 
