--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,15 +14,21 @@
         </li>
       </ul>
       <ul class="navbar-nav">
+        <% if user_signed_in? %>
+        <li class="nav-item">
+          <%= link_to "Logout", destroy_user_session_path , method: :delete, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Admins", new_admin_session_path , class: "nav-link" %>
+        </li>
+        <% else %>
         <li class="nav-item">
           <%= link_to "Signup", new_user_registration_path , class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Login", new_user_session_path , class: "nav-link" %>
         </li>
-        <li class="nav-item">
-          <%= link_to "Admins", new_admin_session_path , class: "nav-link" %>
-        </li>
+        <% end %>
       </ul>
     </div>
   </div>
