--- a/app/views/direct_mails/show.html.erb
+++ b/app/views/direct_mails/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Content:</strong>
-  <%= @direct_mail.content %>
+  <%== @direct_mail.content %>
 </p>
 
 <%= link_to '編集', edit_direct_mail_path(@direct_mail), class: "btn btn-primary" %>
